--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Books#new</h1>
-<p>Find me in app/views/books/new.html.erb</p>
+<h1>New book</h1>
+  <%= form_with model: @book do |f| %>
+    <h4>画像</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+    <h4>title</h4>
+      <%= f.text_field :book_name %>
+    <h4>Opinion</h4>
+      <%= f.text_area :opinion %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
