--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,5 +29,13 @@
     <% end %>
     </header>
     <%= yield %>
+
+    <footer>
+      <div class = "row">
+        <div class = "mx-auto">
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
