削除機能完成

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,6 +27,11 @@
         <%= link_to "ログイン", new_user_session_path %>
       </li>
     <% end %>
+
+　　    <!--仮のヘッダー-->
+    <%= link_to 'Books(本一覧)', books_path %>
+    <!--ユーザーリンク-->
+
     </header>
     <%= yield %>
 
