--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,4 +5,8 @@
   <p>ユーザーネーム：<%= @book.user.name %></p>
 
   <%= link_to "Edit", edit_book_path(@book.id) %>
+
+  <% if @book.user == current_user %>
+    <%= link_to "Destroy", book_path(@book), method: :delete %>
+  <% end %>
 </div>
