バリデーション(記事投稿/編集)

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,8 @@
 <div>
+  <%= flash[:notice] %>
+</div>
+
+<div>
   <%= image_tag @book.get_image %>
   <p>本の名：<%= @book.book_name %></p>
   <p>紹介文：<%= @book.opinion %></p>
