--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,11 +1,20 @@
-<h1>編集画面</h1>
+<h1>Editing Book</h1>
+
+<% if @book.errors.any? %>
+  <%= @book.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
 
-  <h4>タイトル</h4>
+  <h4>Title</h4>
   <%= f.text_field :book_name %>
 
-  <h4>本文</h4>
+  <h4>Opinion</h4>
   <%= f.text_area :opinion %>
 
   <%= f.submit '保存' %>
