--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -12,10 +12,10 @@
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
 
   <h4>Title</h4>
-  <%= f.text_field :book_name %>
+  <%= f.text_field :title %>
 
   <h4>Opinion</h4>
-  <%= f.text_area :opinion %>
+  <%= f.text_area :body %>
 
   <%= f.submit '保存' %>
 
