--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -12,8 +12,8 @@
     <h4>画像</h4>
       <%= f.file_field :image, accept: "image/*" %>
     <h4>title</h4>
-      <%= f.text_field :book_name %>
+      <%= f.text_field :title %>
     <h4>Opinion</h4>
-      <%= f.text_area :opinion %>
+      <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
