--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,9 +1,35 @@
+<h1>New book</h1>
+  <% @book.errors.full_messages.each do |message| %>
+    <div class="form-error">
+       <%= message %>
+    </div>
+  <% end %>
+
+  <% if @book.errors.any? %>
+    <%= @book.errors.count %>件のエラーが発生しました
+    <ul>
+    <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+    </ul>
+  <% end %>
+
+  <%= form_with model: @book do |f| %>
+    <h4>画像</h4>
+      <%= f.file_field :image, accept: "image/*" %>
+    <h4>title</h4>
+      <%= f.text_field :title %>
+    <h4>Opinion</h4>
+      <%= f.text_area :body %>
+    <%= f.submit 'Create Book' %>
+  <% end %>
+
 <% @books.each do |book| %>
 <div>
   <%= link_to book_path(book.id) do %>
     <%= image_tag book.get_image %>
   <% end %>
-  <p>本の名：<%= book.title %></p>
+  <p><%= link_to book.title, book_path(book.id) %></p>
   <p>紹介文：<%= book.body %></p>
 </div>
 <% end %>
