--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,10 +1,4 @@
 <h1>New book</h1>
-  <% @book.errors.full_messages.each do |message| %>
-    <div class="form-error">
-       <%= message %>
-    </div>
-  <% end %>
-
   <% if @book.errors.any? %>
     <%= @book.errors.count %>件のエラーが発生しました
     <ul>
@@ -23,6 +17,10 @@
       <%= f.text_area :body %>
     <%= f.submit 'Create Book' %>
   <% end %>
+
+\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
+
+<h1>Books</h1>
 
 <% @books.each do |book| %>
 <div>
