--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,8 @@
 <!-- ユーザーの詳細 -->
 <div>
-  <h3><%= @user.name %></h3>
   <%= image_tag @user.get_profile_image(100,100) %>
+  <%= @user.name %>
+  <%= @user.introduction %>
   <!--紹介文-->
 
   <% if @user == current_user %>
