--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -19,4 +19,14 @@
 
   <%= f.submit '保存' %>
 
+
+  <div class=link>
+  <!--Show-->
+  <%= link_to "Show", book_path(@book.id) %>
+
+  <!--indexに戻る-->
+  <a href="/books">Back</a>
+</div>
+
+
 <% end %>
