--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,11 @@
-<h1>トップページ</h1>
+<h1>Welcome to Bookers!!</h1>
+
+<p>in Bookers,</p>
+
+<p>you can share and exchange your opinions , inpressions , and emotions</p>
+
+<p>about various books!</p>
+
+
+<a href="/users/sign_in">Log in</a>
+<a href="/users/sign_up">Sign up</a>
