--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,6 +17,7 @@
       <%= link_to 'マイページ', user_path(current_user.id) %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
       <%= link_to 'Books', books_path %>
+      <%= link_to "Users", users_path %>
     <% else %>
       <a href="/homes/about">About</a>
       <%= link_to "Sign up", new_user_registration_path %>
