--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -4,26 +4,9 @@
   <%= @user.name %>
   <%= @user.introduction %>
 
+<!-- 新規作成 -->
+<%= render 'books/book', book: @book %>
 
-<h1>New book</h1>
-  <% if @book.errors.any? %>
-    <%= @book.errors.count %>件のエラーが発生しました
-    <ul>
-    <% @book.errors.full_messages.each do |message| %>
-      <li><%= message %></li>
-    <% end %>
-    </ul>
-  <% end %>
-
-  <%= form_with model: @book do |f| %>
-    <h4>画像</h4>
-      <%= f.file_field :image, accept: "image/*" %>
-    <h4>title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
-  <% end %>
 
 \\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
