--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,15 +12,15 @@
 
   <body>
     <header>
-      <%= link_to 'Bookers', '/homes/top'%>
+      <%= link_to 'Bookers', top_path %>
     <% if user_signed_in? %>
       <%= link_to 'Home', books_path %>
       <%= link_to "Users", users_path %>
       <%= link_to 'Books', books_path %>
       <%= link_to "Log out", destroy_user_session_path, method: :delete %>
     <% else %>
-      <%= link_to 'Home', '/homes/top'%>
-      <%= link_to 'About', '/homes/about'%>
+      <%= link_to 'Home', top_path %>
+      <%= link_to 'About', about_path %>
       <%= link_to "Sign up", new_user_registration_path %>
       <%= link_to "Log in", new_user_session_path %>
     <% end %>
