--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,3 +1,17 @@
+<!-- ユーザーの詳細? -->
+<h1>User info</h1>
+  <%= image_tag @user.get_profile_image(100,100) %>
+  <%= @user.name %>
+  <%= @user.introduction %>
+
+<% if @user == current_user %>
+    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <% end %>
+
+<!-- 新規作成 -->
+<%= render 'books/book', book: @book %>
+
+
 <h1>Book detail</h1>
 
 <div>
