--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,7 +24,10 @@
   <p><%= @book.body %></p>
   <p><%= @book.user.name %></p>
 
-  <%= link_to "Edit", edit_book_path(@book.id) %>
+
+  <% if @book.user == current_user %>
+    <%= link_to "Edit", edit_book_path(@book.id) %>
+  <% end %>
 
   <% if @book.user == current_user %>
     <%= link_to "Destroy", book_path(@book), method: :delete %>
