--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,5 @@
+
+<div class = sideber>
 <!-- ユーザーの詳細? -->
 <h1>User info</h1>
   <%= image_tag @user.get_profile_image(100,100) %>
@@ -5,18 +7,22 @@
   <%= @user.introduction %>
 
   <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+    <%= link_to edit_user_path(@user) do %>
+    　<i class="fas fa-user-cog"></i>
+    <% end %>
+
   <% end %>
 
 <!-- 新規作成 -->
 <%= render 'books/book', book: @book %>
 
+</div>
 
-\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\
 
 <h1>Books</h1>
 
 <% @books.each do |book| %>
+<table class="table table-striped">
 <div>
   <%= link_to book_path(book.id) do %>
     <%= image_tag book.get_image %>
@@ -24,4 +30,5 @@
   <p><%= link_to book.title, book_path(book.id) %></p>
   <p><%= book.body %></p>
 </div>
+</table>
 <% end %>
