--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -4,9 +4,9 @@
 
 <!-- ユーザーの詳細? -->
 <h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <%= @user.name %>
-  <%= @user.introduction %>
+  <%= image_tag @book.user.get_profile_image(100,100) %>
+  <%= @book.user.name %>
+  <%= @book.user.introduction %>
 
 <% if @user == current_user %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
