--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,11 +1,17 @@
-<h1>Welcome to Bookers!!</h1>
 
-<p>in Bookers,</p>
+<div class="container">
+  <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong></h1>
 
-<p>you can share and exchange your opinions , inpressions , and emotions</p>
+  <main>
 
-<p>about various books!</p>
+     <p>in <i class="fas fa-book"></i><strong>Bookers</strong>,</p>
+
+     <p>you can share and exchange your opinions , inpressions , and emotions</p>
+
+     <p>about various books!</p>
 
 
-<a href="/users/sign_in">Log in</a>
-<a href="/users/sign_up">Sign up</a>
+     <a href="/users/sign_in">Log in</a>
+     <a href="/users/sign_up">Sign up</a>
+  </main>
+</div>
