--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -8,8 +8,10 @@
   <%= @book.user.name %>
   <%= @book.user.introduction %>
 
-<% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+  <% if @user == current_user %>
+    <%= link_to edit_user_path(@user) do %>
+    　<i class="fas fa-user-cog"></i>
+    <% end %>
   <% end %>
 
 <!-- 新規作成 -->
