--- a/app/views/home/top.html.erb
+++ b/app/views/home/top.html.erb
@@ -1,3 +1,6 @@
+<div>
+  <%= flash[:notice] %>
+</div>
 
 <div class="container">
   <h1>welcome to <i class="fas fa-book"></i><strong>Bookers!!</strong></h1>
