--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -6,7 +6,9 @@
   <%= @user.introduction %>
 
   <% if @user == current_user %>
-    <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+      <%= link_to edit_user_path(@user) do %>
+    　<i class="fas fa-user-cog"></i>
+    　<% end %>
   <% end %>
 </div>
 
