--- a/app/views/books/_book.html.erb
+++ b/app/views/books/_book.html.erb
@@ -1,4 +1,4 @@
-<h1>New book</h1>
+<h2>New book</h2>
   <% if book.errors.any? %>
     <%= book.errors.count %>件のエラーが発生しました
     <ul>
@@ -8,10 +8,23 @@
     </ul>
   <% end %>
 
+
+ <form action="/books" accept-charset="UTF-8" method="post">
+
   <%= form_with model: book do |f| %>
-    <h4>title</h4>
-      <%= f.text_field :title %>
-    <h4>Opinion</h4>
-      <%= f.text_area :body %>
-    <%= f.submit 'Create Book' %>
+   <div class="form-group">
+    <label for="book_title">title</label>
+     <input class="form-control book_title" type="text" name="book[title]" id="book_title">
+   </div>
+
+   <div class="form-group">
+    <label for="book_option">Opinion</label>
+     <textarea class="form-control book_body" name="book[body]" id="book_body"></textarea>
+   </div>
+
+   <div class="form-group">
+     <input type="submit" name="commit" value="Create Book" class="btn btn-success" data-disable-with="Create Book">
+   </div>
   <% end %>
+
+</form>
