--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,8 +13,8 @@
 
   <body class="d-flex flex-column vh-100">
     <header class="shadow-sm">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <div class="container">
+     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <div class="container">
           <a class="navbar-brand" href="/">
             <span>Bookers</span>
           </a>
@@ -23,7 +23,7 @@
           </button>
 
 
-      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+      <div class="collapse navbar-collapse" id="navbarNavDropdown" style>
         <ul class="navbar-nav ml-auto">
     <% if user_signed_in? %>
       <%= link_to user_path(current_user.id), class:"nav-link text-light" do %>
@@ -70,11 +70,13 @@
 
 
     <footer>
+     <div class="container mt-5">
       <div class = "row">
         <div class = "mx-auto">
           <p>CopyRight Infratop.inc</p>
         </div>
       </div>
+     </div>
     </footer>
   </body>
 </html>
