--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,88 @@
-<div>
-  <%= flash[:notice] %>
-</div>
+<main>
+  <p><%= flash[:notice] %></p>
 
+<div class="container px-5 px-sm-0">
+ <div class="row">
+
+  <div class="col-md-3">
 <!-- ユーザーの詳細 -->
+   <h2>User info</h2>
+   <div>
+      <%= image_tag @user.get_profile_image(100,100) %>
+     <table class="table">
+      <tbody>
+       <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+       </tr>
+       <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+       </tr>
+      </tbody>
+     </table>
 
-<h1>User info</h1>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <%= @user.name %>
-  <%= @user.introduction %>
+     <div class="row">
+      <div class="btn btn-outline-secondary btn-block">
+       <% if @user == current_user %>
+         <%= link_to edit_user_path(@user) do %>
+      　    <i class="fas fa-user-cog"></i>
+         <% end %>
+       <% else %>
+         <%= link_to user_path(current_user.id) do %>
+           <i class="fas fa-user-cog"></i>
+         <% end %>
+       <% end %>
+      </div>
+     </div>
+   </div>
 
-  <% if @user == current_user %>
-    <%= link_to edit_user_path(@user) do %>
-    　<i class="fas fa-user-cog"></i>
-    <% end %>
-  <% else %>
-    <%= link_to user_path(current_user.id) do %>
-      <i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %>
-</div>
+    <!-- 新規作成 -->
+     <%= render 'books/book', book: @book %>
 
-<!-- 新規作成 -->
-<%= render 'books/book', book: @book %>
+  </div>
 
 
+<div class="col-md-8 offset-md-1">
 <!--現在のユーザーの投稿一覧-->
-<h1>Books</h1>
+ <h2>Books</h2>
 
-<% @books.each do |book| %>
-<table class="table table-striped">
-<div>
-  <%= link_to book_path(book.id) do %>
-    <%= image_tag book.get_image %>
-  <% end %>
-  <p><%= link_to book.title, book_path(book.id) %></p>
-  <p><%= book.body %></p>
-</div>
+ <table class="table table-hover table-striped">
+  <thead>
+    <tr>
+      <th></th>
+      <th>Title</th>
+      <th>Option</th>
+      <th colspan="3"></th>
+    </tr>
+  </thead>
+
+  <tbody>
+    <tr>
+       <% @books.each do |book| %>
+
+      <td>
+        <%= link_to book_path(book.id) do %>
+          <%= image_tag book.get_image %>
+        <% end %>
+      </td>
+
+      <td>
+        <p><%= link_to book.title, book_path(book.id) %></p>
+      </td>
+
+      <td>
+        <p><%= book.body %></p>
+      </td>
+
+    </tr>
+       <% end %>
+  </tbody>
 </table>
-<% end %>
 
+
+</div>
+
+ </div>
+</div>
+</main>
