--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,33 +1,70 @@
 
-<div class = sideber>
+<div class="container px-5 px-sm-0">
+ <div class="row">
+  <div class="col-md-3">
 <!-- ユーザーの詳細? -->
-<h1>User info</h1>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <%= @user.name %>
-  <%= @user.introduction %>
+    <h2>User info</h2>
+      <%= image_tag @user.get_profile_image(100,100) %>
+     <table class="table">
+      <tboby>
+        <tr>
+         <th>name</th>
+         <th><%= @user.name %></th>
+        </tr>
+        <tr>
+         <th>introduction</th>
+         <th><%= @user.introduction %></th>
+        </tr>
+      </tbody>
+     </table>
 
-  <% if @user == current_user %>
-    <%= link_to edit_user_path(@user) do %>
-    　<i class="fas fa-user-cog"></i>
-    <% end %>
-  <% end %>
+ <div class="row">
+  <div class="btn btn-outline-secondary btn-block edit_user_path"
+      <% if @user == current_user %>
+        <%= link_to edit_user_path(@user) do %>
+        　<i class="fas fa-user-cog"></i>
+        <% end %>
+      <% end %>
+  </div>
+ </div>
 
 <!-- 新規作成 -->
-<%= render 'books/book', book: @book %>
+      <%= render 'books/book', book: @book %>
+  </div>
 
+
+<div class="col-md-8 offset-md-1">
+     <h2>Books</h2>
+
+  <table class="table table-striped table-inverse">
+   <thead>
+    <tr>
+     <th></th>
+     <th>Title</th>
+     <th>Opinion</th>
+     <th colspan="3"></th>
+    </tr>
+   </thead>
+
+   <tboby>
+      <% @books.each do |book| %>
+    <tr>
+     <td>
+        <%= link_to book_path(book.id) do %>
+          <%= image_tag book.get_image %>
+        <% end %>
+     </td>
+     <td>
+        <p><%= link_to book.title, book_path(book.id) %></p>
+     </td>
+     <td>
+        <p><%= book.body %></p>
+     </td>
+    </tr>
+        <% end %>
+   </tbody>
+  </table>
 </div>
 
-
-<h1>Books</h1>
-
-<% @books.each do |book| %>
-<table class="table table-striped">
-<div>
-  <%= link_to book_path(book.id) do %>
-    <%= image_tag book.get_image %>
-  <% end %>
-  <p><%= link_to book.title, book_path(book.id) %></p>
-  <p><%= book.body %></p>
+ </div>
 </div>
-</table>
-<% end %>
