--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,12 +8,15 @@
 <!-- ユーザーの詳細 -->
    <h2>User info</h2>
    <div>
-      <%= image_tag @user.get_profile_image(100,100) %>
+      <%= link_to "/books" do %>
+        <%= image_tag @user.get_profile_image(100,100) %>
+      <% end %>
+      
      <table class="table">
       <tbody>
        <tr>
          <th>name</th>
-         <th><%= @user.name %></th>
+         <th><%= link_to @user.name,"/books" %></th>
        </tr>
        <tr>
          <th>introduction</th>
