--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,3 +1,9 @@
+<main>
+ <div class="container">
+  <div class="row">
+   <div class="col-sm-12 col-md-8 col-lg-5 px-sm-0 mx-auto">
+
+
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
@@ -11,22 +17,35 @@
 
 <%= form_with model: @book, url: update_book_path(@book.id), method: :patch do |f| %>
 
-  <h4>Title</h4>
-  <%= f.text_field :title %>
+  <div class="form-group">
+    <label for="book_title">Title</label>
+    <br>
+    <%= f.text_field :title %>
+  </div>
 
-  <h4>Opinion</h4>
-  <%= f.text_area :body %>
+  <div class="form-group">
+    <label class="form-group">Opinion</label>
+    <br>
+    <%= f.text_area :body %>
+  </div>
 
-  <%= f.submit 'Update Book' %>
-
+  <div class="form-group">
+    <input type="submit" name="commit" value="Update Book" class="btn btn-success" data-disable-with="Update Book">
+  </div>
 
   <div class=link>
   <!--Show-->
   <%= link_to "Show", book_path(@book.id) %>
+  
+  |
 
   <!--indexに戻る-->
   <a href="/books">Back</a>
 </div>
 
-
 <% end %>
+
+   </div>
+  </div>
+ </div>
+</main>
