--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -19,7 +19,7 @@
      </table>
 
  <div class="row">
-  <div class="btn btn-outline-secondary btn-block edit_user_path"
+  <div class="btn btn-outline-secondary btn-block">
       <% if @user == current_user %>
         <%= link_to edit_user_path(@user) do %>
         　<i class="fas fa-user-cog"></i>
@@ -33,38 +33,38 @@
   </div>
 
 
-<div class="col-md-8 offset-md-1">
-     <h2>Books</h2>
+  <div class="col-md-8 offset-md-1">
+       <h2>Books</h2>
 
-  <table class="table table-striped table-inverse">
-   <thead>
-    <tr>
-     <th></th>
-     <th>Title</th>
-     <th>Opinion</th>
-     <th colspan="3"></th>
-    </tr>
-   </thead>
+    <table class="table table-striped table-inverse">
+     <thead>
+      <tr>
+       <th></th>
+       <th>Title</th>
+       <th>Opinion</th>
+       <th colspan="3"></th>
+      </tr>
+     </thead>
 
-   <tboby>
-      <% @books.each do |book| %>
-    <tr>
-     <td>
-        <%= link_to book_path(book.id) do %>
-          <%= image_tag book.get_image %>
-        <% end %>
-     </td>
-     <td>
-        <p><%= link_to book.title, book_path(book.id) %></p>
-     </td>
-     <td>
-        <p><%= book.body %></p>
-     </td>
-    </tr>
-        <% end %>
-   </tbody>
-  </table>
-</div>
+     <tboby>
+        <% @books.each do |book| %>
+      <tr>
+       <td>
+          <%= link_to book_path(book.id) do %>
+            <%= image_tag book.get_image %>
+          <% end %>
+       </td>
+       <td>
+          <p><%= link_to book.title, book_path(book.id) %></p>
+       </td>
+       <td>
+          <p><%= book.body %></p>
+       </td>
+      </tr>
+          <% end %>
+     </tbody>
+    </table>
+  </div>
 
  </div>
 </div>
