--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,26 +1,47 @@
-<h2>User info</h2>
+<main>
+ <div class="container">
+  <div class="row">
+   <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
 
-<% if @user.errors.any? %>
-   <%= @user.errors.count %> error prohibited this book from being saved:
-    <div>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </div>
-   <% end %>
+     <h2>User info</h2>
+
+   <div id="error_explanation">
+     <% if @user.errors.any? %>
+        <h4><%= @user.errors.count %> error prohibited this book from being saved:</h4>
+         <div>
+           <% @user.errors.full_messages.each do |message| %>
+             <li><%= message %></li>
+           <% end %>
+         </div>
+        <% end %>
+   </div>
 
 <%= form_with model: @user do |f| %>
+ <div class="form-group">
   <label for="inputName">Name</label>
+  <br>
   <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
   <br>
+ </div>
 
+ <div class="form-group">
   <label for="inputImage">Image</label>
+  <br>
   <%= f.file_field :profile_image, placeholder: "プロフィール画像", accept: "image/*" %>
-  <br>
+ </div>
 
+ <div class="form-group">
   <label for="inputIntroduction">Introduction</label>
-  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"紹介"%>
   <br>
+  <%= f.text_field :introduction, autofocus: true, id:"inputIntroduction", placeholder:"紹介"%>
+ </div>
 
-  <%= f.submit "Update User" %>
+ <div class="form-group">
+  <input type="submit" name="commit" value="Update User" class="btn btn-secondary" data-disable-with="Update User">
+ </div>
 <% end %>
+
+   </div>
+  </div>
+ </div>
+</main>
