--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,32 +1,62 @@
 <main>
  <div class="container px-5 px-sm-0">
+  <div class="row">
+   <div class="col-md-3">
 
 <!--ユーザーインフォ-->
-<h2>User info</h2>
-<div>
-  <%= image_tag @user.get_profile_image(100,100) %>
-  <%= @user.name %>
-  <%= @user.introduction %>
+     <h2>User info</h2>
+     <%= image_tag @user.get_profile_image(100,100) %>
+   <table class="table">
+    <tbody>
+     <tr>
+      <th>name</th>
+      <th><%= @user.name %></th>
+     </tr>
+     <tr>
+      <th>introduction</th>
+      <th><%= @user.introduction %></th>
+     </tr>
+    </tbody>
+   </table>
 
-  <% if @user == current_user %>
-      <%= link_to edit_user_path(@user) do %>
-    　<i class="fas fa-user-cog"></i>
-    　<% end %>
-  <% end %>
-</div>
+   <div class="row">
+    <div class="btn btn-outline-secondary btn-block">
+     <% if @user == current_user %>
+         <%= link_to edit_user_path(@user) do %>
+    　     <i class="fas fa-user-cog"></i>
+       　<% end %>
+     <% end %>
+    </div>
+   </div>
+
 
 <!--新規投稿-->
-<%= render 'books/book', book: @book %>
+     <%= render 'books/book', book: @book %>
 
-<h2>Users</h2>
+  </div>
 
-<% @users.each do |user| %>
-    <li>
-      <%= image_tag user.get_profile_image(100,100) %>
-      <%= user.name %>
-      <%= link_to 'show', user %>
-    </li>
-<% end %>
+  <div class="col-md-8 offset-md-1">
+    <h2>Users</h2>
+   <table class="table">
+    <thead>
+     <tr>
+      <th>image</th>
+      <th>name</th>
+      <th colspan="3"></th>
+     </tr>
+    </thead>
+    <tbody>
+      <% @users.each do |user| %>
+     <tr>
+      <td><%= image_tag user.get_profile_image(100,100) %></td>
+      <td><%= user.name %></td>
+      <td><%= link_to 'show', user %></td>
+     </tr>
+      <% end %>
+    </tbody>
+   </table>
+  </div>
 
+  </div>
  </div>
 </main>
