--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -11,12 +11,12 @@
       <%= link_to "/books" do %>
         <%= image_tag @user.get_profile_image(100,100) %>
       <% end %>
-      
+
      <table class="table">
       <tbody>
        <tr>
          <th>name</th>
-         <th><%= link_to @user.name,"/books" %></th>
+         <th><%= @user.name %></th>
        </tr>
        <tr>
          <th>introduction</th>
@@ -45,7 +45,6 @@
 
   </div>
 
-
 <div class="col-md-8 offset-md-1">
 <!--現在のユーザーの投稿一覧-->
  <h2>Books</h2>
@@ -59,25 +58,20 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-
   <tbody>
     <tr>
        <% @books.each do |book| %>
-
       <td>
-        <%= link_to book_path(book.id) do %>
+        <%= link_to user_path do %>
           <%= image_tag book.get_image %>
         <% end %>
       </td>
-
       <td>
         <p><%= link_to book.title, book_path(book.id) %></p>
       </td>
-
       <td>
         <p><%= book.body %></p>
       </td>
-
     </tr>
        <% end %>
   </tbody>
