--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -24,13 +24,11 @@
       </table>
 
       <div class="row">
-       <div class="btn btn-outline-secondary btn-block">
-         <% if @user == current_user %>
-           <%= link_to edit_user_path(@user) do %>
+         <% if @book.user == current_user %>
+           <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
            　<i class="fas fa-user-cog"></i>
            <% end %>
          <% end %>
-       </div>
       </div>
 
 <!-- 新規作成 -->
@@ -41,20 +39,23 @@
    <div class="col-md-8 offset-md-1">
       <h2>Book detail</h2>
 
-    <table class="table">
-     <tbody>
+    <tbody class="table">
+
       <tr>
        <td>
+        <%= link_to user_path(@book.user.id) do %>
          <%= image_tag @book.get_image %>
          <br>
-         <%= @book.user.name %><!--リンク貼る-->
+         <%= @book.user.name %>
+         <% end %>
        </td>
        <td>
-         <%= @book.title %><!--リンク貼る-->
+         <%= link_to @book.title, book_path(@book.id) %>
        </td>
        <td>
          <%= @book.body %>
        </td>
+
 
       <td>
         <% if @book.user == current_user %>
