--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -18,15 +18,13 @@
       </tbody>
      </table>
 
- <div class="row">
-  <div class="btn btn-outline-secondary btn-block">
+  <div class="row">
       <% if @user == current_user %>
-        <%= link_to edit_user_path(@user) do %>
+        <%= link_to edit_user_path(@user), class:"btn btn-outline-secondary btn-block" do %>
         　<i class="fas fa-user-cog"></i>
         <% end %>
       <% end %>
   </div>
- </div>
 
 <!-- 新規作成 -->
       <%= render 'books/book', book: @book %>
