--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
 
       <div class="row">
          <% if @book.user == current_user %>
-           <%= link_to edit_user_path(@user), class: "btn btn-outline-secondary btn-block" do %>
+           <%= link_to edit_user_path(@book.user), class:"btn btn-outline-secondary btn-block" do %>
            　<i class="fas fa-user-cog"></i>
            <% end %>
          <% end %>
