--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -20,13 +20,11 @@
    </table>
 
    <div class="row">
-    <div class="btn btn-outline-secondary btn-block">
      <% if @user == current_user %>
-         <%= link_to edit_user_path(@user) do %>
+         <%= link_to edit_user_path(@user), class:"btn btn-outline-secondary btn-block" do %>
     　     <i class="fas fa-user-cog"></i>
        　<% end %>
      <% end %>
-    </div>
    </div>
 
 
