--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -26,17 +26,15 @@
      </table>
 
      <div class="row">
-      <div class="btn btn-outline-secondary btn-block">
        <% if @user == current_user %>
-         <%= link_to edit_user_path(@user) do %>
+         <%= link_to edit_user_path(@user), class:"btn btn-outline-secondary btn-block" do %>
       　    <i class="fas fa-user-cog"></i>
          <% end %>
        <% else %>
-         <%= link_to user_path(current_user.id) do %>
+         <%= link_to user_path(current_user.id), class:"btn btn-outline-secondary btn-block" do %>
            <i class="fas fa-user-cog"></i>
          <% end %>
        <% end %>
-      </div>
      </div>
    </div>
 
