--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,3 +1,4 @@
+<main>
 
 <div class="container px-5 px-sm-0">
  <div class="row">
@@ -34,7 +35,7 @@
   <div class="col-md-8 offset-md-1">
        <h2>Books</h2>
 
-    <table class="table table-striped table-inverse">
+    <table class="table table-hover table-inverse">
      <thead>
       <tr>
        <th></th>
@@ -48,15 +49,15 @@
         <% @books.each do |book| %>
       <tr>
        <td>
-          <%= link_to book_path(book.id) do %>
+          <%= link_to user_path(book.id) do %>
             <%= image_tag book.get_image %>
           <% end %>
        </td>
        <td>
-          <p><%= link_to book.title, book_path(book.id) %></p>
+          <%= link_to book.title, book_path(book.id) %>
        </td>
        <td>
-          <p><%= book.body %></p>
+          <%= book.body %>
        </td>
       </tr>
           <% end %>
@@ -66,3 +67,5 @@
 
  </div>
 </div>
+
+</main>
