--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -7,7 +7,7 @@
 <h1>Editing Book</h1>
 
 <% if @book.errors.any? %>
-  <%= @book.errors.count %>件のエラーが発生しました
+  <h3><%= @book.errors.count %>error prohibited this obj from being saved:</h3>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
@@ -36,7 +36,7 @@
   <div class=link>
   <!--Show-->
   <%= link_to "Show", book_path(@book.id) %>
-  
+
   |
 
   <!--indexに戻る-->
